chore: migrate project to a mandatory libGDX architecture